// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconApple /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconApple /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconApple /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconApple /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconApple /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconApple /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconApple /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconApple /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconApple /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconApple /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconApple /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconApple /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M187.1 131c-.3-27.4 22.4-40.5 23.4-41.2-12.7-18.6-32.6-21.1-39.6-21.4-16.9-1.7-32.9 9.9-41.5 9.9-8.5 0-21.8-9.7-35.7-9.4-18.4.2-35.4 10.6-44.8 27.1-19.1 33.1-4.9 82.2 13.7 109 9.1 13.1 20 27.9 34.2 27.4 13.7-.5 18.9-8.9 35.5-8.9s21.2 8.9 35.8 8.6c14.8-.3 24.1-13.4 33.2-26.6 10.4-15.3 14.8-30 15-30.8-.4-.1-28.9-11-29.2-43.7m-27.2-80.4c7.6-9.2 12.7-21.9 11.3-34.6-10.9.4-24.1 7.3-31.9 16.4-7 8.1-13.3 21.4-11.7 33.8 12.1.9 24.7-6.5 32.3-15.6"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
